syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";

service BillingServiceGrpc {
  rpc createBill(BillRequest) returns (BillResponse);
}

message BillRequest {
  int64 patientId = 1;
  string serviceType = 2;
  double amount = 3;
  string billDate = 4;
  bool paid = 5;
}

message BillResponse {
  int64 id = 1;
  int64 patientId = 2;
  string serviceType = 3;
  double amount = 4;
  string billDate = 5;
  bool paid = 6;
  bool found = 7; // Indicates if the bill was found (for GetBillById)
}